--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,11 @@
     "require": {
         "slim/slim": "3.0",
         "slim/twig-view": "^2.3",
-        "illuminate/database": "^5.5",
         "respect/validation": "^1.1",
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "illuminate/database": "^5.5",
+        "robmorgan/phinx": "^0.9.2",
+        "monolog/monolog": "^1.23"
     },
 
     "autoload": {
