--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
-    "name": "aassite-backend",
-    "description": "This is for my personal site API",
+    "name": "aasumitro/with-slim",
+    "description": "A Slim Framework skeleton application for rapid development",
+    "keywords": ["microframework", "rest", "router", "psr7"],
+    "homepage": "http://github.com/aasumitro/with-slim",
+    "license": "MIT",
     "require": {
         "slim/slim": "3.0",
         "slim/twig-view": "^2.3",
@@ -8,20 +11,22 @@
         "phpmailer/phpmailer": "^6.0",
         "illuminate/database": "^5.5",
         "robmorgan/phinx": "^0.9.2",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "slim/csrf": "^0.8.3"
     },
-
     "autoload": {
         "psr-4": {
-            "App\\": "app"
+            "App\\": "src"
         }
     },
-
     "authors": [
        {
            "name": "Agus Adhi Sumitro",
            "email": "aasumitro@merahputih.id",
            "homepage": "https://aasumitro.id"
        }
-    ]
+    ],
+    "scripts": {
+        "start": "php -S localhost:8080 -t public"
+    }
 }
