--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "illuminate/database": "^5.5",
         "robmorgan/phinx": "^0.9.2",
         "monolog/monolog": "^1.23",
-        "slim/csrf": "^0.8.3"
+        "slim/csrf": "^0.8.3",
+        "slim/flash": "^0.4.0"
     },
     "autoload": {
         "psr-4": {
