--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,12 @@ APP_DEBUG = true
 
 APP_DB_DRIVER = mysql
 APP_DB_HOST = 127.0.0.1
-APP_DB_NAME = slims_dbs
-APP_DB_USERNAME = root
-APP_DB_PASSWORD =
+APP_DB_NAME = with_slim_db
+APP_DB_USERNAME = foki
+APP_DB_PASSWORD = poke
 APP_DB_CHARSET = utf8
 APP_DB_COLLATION = utf8_unicode_ci
+
+MAIL_ADR = hello@fokipoke.com
+MAIL_PWD = password
+MAIL_USR = FokiPoke Studio
