up dotEnv to 3+

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ APP_DB_COLLATION = utf8_unicode_ci
 
 MAIL_ADR = hello@fokipoke.com
 MAIL_PWD = password
-MAIL_USR = FokiPoke Studio
+MAIL_USR = "FokiPoke Studio"
